--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -398,6 +398,9 @@ a {
 .bg-silver1 {
   background: #F6F6FA !important;
 }
+.bg-silver7 {
+  background: #F2F2F7 !important;
+}
 .form-field1 input {
     height: 33px;
 }
@@ -520,6 +523,15 @@ input[type=number] {
 .bg-green1 {
     background: #387000 !important;
 }
+.bg-green3 {
+    background: #2B5600 !important;
+}
+.bg-green4 {
+    background: #EDF2E8 !important;
+}
+.bg-green09 {
+    background: rgba(56, 112, 0, 0.09) !important;
+}
 
 
 .logo img {
@@ -578,6 +590,9 @@ header {
 }
 .text-green4 {
     color: #2B5700 !important;
+}
+.text-green5 {
+    color: #2B5600 !important;
 }
 
 .bg-silver3 {
@@ -1027,6 +1042,9 @@ section.right-content-wrapper {
 
 .bg-silver5 {
     background: #f9f9f9 !important;
+}
+.bg-silver6 {
+    background: #F3F3F5;
 }
 
 .field-style5 {
@@ -2025,4 +2043,236 @@ span.custom-line-4 {
   left: -315px;
   transform: rotate(288deg);
   max-width: 500px;
+}
+.fz-16 {
+  font-size: 16px;
+}.fz-18 {
+  font-size: 18px;
+}.fz-20 {
+  font-size: 20px;
+}.fz-24 {
+  font-size: 24px;
+}
+.fz-26 {
+  font-size: 26px;
+}.fz-28 {
+  font-size: 28px;
+}.fz-32 {
+  font-size: 32px;
+}.fz-42 {
+  font-size: 42px;
+}
+.width-20{
+  width: 20px;
+}
+.width-80{
+  width: 80px;
+}
+.width-114{
+  width: 114px;
+}
+.width-160{
+  width: 160px;
+}
+.width-180{
+  width: 180px;
+}
+.width-198{
+  width: 198px;
+}
+.width-200{
+  width: 200px;
+}
+.width-300{
+  width: 300px;
+}
+.width-360{
+  width: 360px;
+}
+.height-20 {
+  height: 20px;
+}
+.height-57 {
+  height: 57px;
+}
+.height-60 {
+  height: 60px;
+}
+.height-70 {
+  height: 70px;
+}
+.height-76 {
+  height: 76px;
+}
+.height-80 {
+  height: 80px;
+}
+.height-114 {
+  height: 114px;
+}
+.height-200 {
+  height: 200px;
+}
+.border-radius-06 {
+  border-radius: 6px;
+}
+.border-radius-08 {
+  border-radius: 8px;
+}
+.border-radius-10 {
+  border-radius: 10px;
+}
+.border-radius-50 {
+  border-radius: 50%;
+}
+.gap-10 {
+  gap: 10px
+}
+.gap-23 {
+  gap: 23px
+}
+.gap-40 {
+  gap: 40px
+}
+.gap-70 {
+  gap: 70px
+}
+.p-d-l-41 {
+  padding-left: 41px
+}
+.p-d-r-41 {
+  padding-right: 41px
+}
+.pd-20 {
+  padding: 20px;
+}
+.pd-30 {
+  padding: 30px;
+}
+.pd-40 {
+  padding: 40px;
+}
+.pd-43 {
+  padding: 43px;
+}
+.mt-15 {
+  margin-top: 15px;
+}
+.mt-16 {
+  margin-top: 16px;
+}
+.mt-20 {
+  margin-top: 20px;
+}
+.mt-30 {
+  margin-top: 30px;
+}
+.mt-55 {
+  margin-top: 55px;
+}
+.mt-57 {
+  margin-top: 57px;
+}
+.mt-83 {
+  margin-top: 83px;
+}
+.mt-113 {
+  margin-top: 113px;
+}
+.text-indent-20{
+  text-indent: 20px;
+}
+.flex-1 {
+  flex: 1;
+}
+.flex-2-5 {
+  flex: 2.5;
+}
+.pd-25-40 {
+  padding: 25px 40px
+}
+.pd-17-19 {
+  padding: 17px 19px
+}
+.text-right {
+  text-align: right;
+}
+.b-t-r-right-left-8 {
+  border-top-right-radius: 8px;
+  border-top-left-radius: 8px;
+}
+.b-b-r-right-left-8 {
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+}
+.c-red-1 {
+  color: #D80004
+}.c-grey-1 {
+  color: #8E8E93
+}
+.mg-0-41 {
+  margin: 0 41px;
+}
+.division {
+  height: 1px;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.25) !important;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.border-r-1 {
+  border-right: 1px solid rgba(0, 0, 0, 0.25);
+}
+.border-gray-1 {
+  border-right: 1px solid rgba(0, 0, 0, 0.25);
+}
+.triangle-down {
+  width: 0;
+  height: 0;
+  border-left: 27px solid transparent;
+  border-right: 27px solid transparent;
+  border-top: 40px solid #EDF2E8;
+  margin: auto;
+}
+.w-30 {
+  width: 30% !important;
+}
+
+.checkbox-style2 {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  user-select: none;
+}
+
+.checkbox-style2 .checkmark {
+  width: 20px;
+  height: 20px;
+  background-color: #ddd;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  margin-right: 10px;
+  transition: all 0.3s ease;
+  position: relative;
+}
+
+.checkbox-style2 input[type="checkbox"]:checked + .checkmark {
+  background-color: #A1D800;
+  border-color: #A1D800;
+}
+
+.checkbox-style2 input[type="checkbox"]:checked + .checkmark::after {
+  content: "";
+  position: absolute;
+  left: 6px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  transform: rotate(45deg);
+}
+
+.custom-checkbox:hover .checkmark {
+  background-color: #f0f0f0;
 }
