--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -2182,6 +2182,9 @@ span.custom-line-4 {
 .mt-113 {
   margin-top: 113px;
 }
+.ml-20 {
+  margin-left: 20px !important;
+}
 .text-indent-20{
   text-indent: 20px;
 }
