--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -328,6 +328,9 @@ a {
 .text-black1 {
   color: #091037 !important;
 }
+.text-black2 {
+  color: #050F15 !important;
+}
 .bg-gradient-1 {
   background: linear-gradient(180deg, #346A04, #A1D800);
 }
@@ -400,6 +403,9 @@ a {
 }
 .bg-silver7 {
   background: #F2F2F7 !important;
+}
+.bg-silver8 {
+  background: #E5E5EA !important;
 }
 .form-field1 input {
     height: 33px;
@@ -510,6 +516,9 @@ input[type=number] {
 
 .text-black2 {
     color: #212121 !important;
+}
+.text-black3 {
+    color: #0B0B0B;
 }
 
 .border-color-black2 {
@@ -2062,6 +2071,9 @@ span.custom-line-4 {
 }.fz-42 {
   font-size: 42px;
 }
+.fz-44 {
+  font-size: 44px;
+}
 .width-20{
   width: 20px;
 }
@@ -2070,6 +2082,9 @@ span.custom-line-4 {
 }
 .width-114{
   width: 114px;
+}
+.width-123{
+  width: 123px;
 }
 .width-160{
   width: 160px;
@@ -2085,6 +2100,9 @@ span.custom-line-4 {
 }
 .width-300{
   width: 300px;
+}
+.width-316{
+  width: 316px;
 }
 .width-360{
   width: 360px;
@@ -2110,6 +2128,9 @@ span.custom-line-4 {
 .height-114 {
   height: 114px;
 }
+.height-123 {
+  height: 123px;
+}
 .height-200 {
   height: 200px;
 }
@@ -2134,8 +2155,14 @@ span.custom-line-4 {
 .gap-23 {
   gap: 23px
 }
+.gap-32 {
+  gap: 32px
+}
 .gap-40 {
   gap: 40px
+}
+.gap-60 {
+  gap: 60px
 }
 .gap-70 {
   gap: 70px
@@ -2145,6 +2172,9 @@ span.custom-line-4 {
 }
 .p-d-r-41 {
   padding-right: 41px
+}
+.pd-09 {
+  padding: 9px;
 }
 .pd-20 {
   padding: 20px;
@@ -2157,6 +2187,18 @@ span.custom-line-4 {
 }
 .pd-43 {
   padding: 43px;
+}
+.pd-60 {
+  padding: 60px;
+}
+.pd-67 {
+  padding: 67px;
+}
+.pt-25 {
+  padding-top: 25px;
+}
+.pb-25 {
+  padding-bottom: 25px;
 }
 .mt-15 {
   margin-top: 15px;
@@ -2188,8 +2230,17 @@ span.custom-line-4 {
 .text-indent-20{
   text-indent: 20px;
 }
+.flex-0-5 {
+  flex: 0.5;
+}
 .flex-1 {
   flex: 1;
+}
+.flex-1-5 {
+  flex: 1.5;
+}
+.flex-2 {
+  flex: 2;
 }
 .flex-2-5 {
   flex: 2.5;
@@ -2199,6 +2250,15 @@ span.custom-line-4 {
 }
 .pd-17-19 {
   padding: 17px 19px
+}
+.pd-17-21 {
+  padding: 17px 21px
+}
+.pd-60-60-70 {
+  padding: 60px 60px 70px
+}
+.pd-45-60 {
+  padding: 45px 60px
 }
 .text-right {
   text-align: right;
@@ -2213,8 +2273,15 @@ span.custom-line-4 {
 }
 .c-red-1 {
   color: #D80004
-}.c-grey-1 {
+}
+.c-grey-1 {
   color: #8E8E93
+}
+.bg-grey1 {
+  color: #8E8E93
+}
+.bg-black1 {
+  color: #050F15
 }
 .mg-0-41 {
   margin: 0 41px;
@@ -2469,4 +2536,24 @@ span.custom-line-4 {
     border-top: 32px solid #EDF2E8;
     margin: auto;
   }
+}
+.box-shadow-1 {
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
+}
+.border-b-1 {
+  border-bottom: 1px solid #B0B7C8;
+}
+.border-b-2 {
+  border-bottom: 1px solid #7C7F7A;
+}
+.active-sidebar {
+  background: #A1D800 !important;
+  color: #050F15 !important;
+}
+.border-green {
+  border: 1px solid #387000
+}
+.active-tab-1 {
+  background: #387000;
+  color: white;
 }
