--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -338,6 +338,10 @@ a {
   height: 100vh !important;
   overflow: auto;
 }
+.half-heighted-content {
+    height: 50vh;
+    overflow: auto  ;
+}
 .logo-image-1 {
     height: 65px;
 }
