fix admin sidebar + add loading

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -408,6 +408,9 @@ a {
 .bg-silver7 {
   background: #F2F2F7 !important;
 }
+.bg-silver9 {
+  background: #f2f2f7a6 !important;
+}
 .bg-silver8 {
   background: #E5E5EA !important;
 }
